--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="sm:w-full ">
       <div class="relative">
-        <img class=" h-72" src="../images/bg-desktop-light.jpg" alt="">
+        <img class=" h-72" src="./images/bg-desktop-light.jpg" alt="">
         <div class="absolute  sm:text-2xl top-3/4 left-1/2 -translate-x-1/2 -translate-y-1/2">
           <div class="flex justify-between w-36 sm:flex sm:justify-between sm:w-96 items-baseline mb-8">
             <h1 class=" text-2xl sm:text-5xl mt-8 sm:ml-12  text-white ">Todo</h1>
@@ -27,7 +27,7 @@
           <div class="sm:w-36 text-center justify-center relative flex items-center mx-auto">
             <!-- <input class="border-red-900" type="radio"> -->
             <button id="enter" class="mr-40 border-8 border-solid border-gray-600 sm:mr-80 absolute w-4 h-4 bg-blue-700 rounded-circle">
-              <img class="" src="../images/icon-check.svg" alt="" srcset="">
+              <img class="" src="./images/icon-check.svg" alt="" srcset="">
             </button>
             <div class="">
               <input id="field" class="w-52  sm:w-96 rounded outline-none h-10" type="text">
@@ -38,7 +38,7 @@
             <ul>
               <li class="border-black"></li>
             </ul>
-            <img id="clear" src="../images/icon-cross.svg" alt="" srcset="">
+            <img id="clear" src="./images/icon-cross.svg" alt="" srcset="">
           </div>
         </div>
         
