--- a/public/index.html
+++ b/public/index.html
@@ -17,11 +17,11 @@
 <body>
     <div class="sm:w-full ">
       <div class="relative">
-        <img class=" h-72" src="./images/bg-desktop-light.jpg" alt="">
+        <img id="mainImage" class=" h-72" src="./images/bg-desktop-light.jpg" alt="">
         <div class="absolute  sm:text-2xl top-3/4 left-1/2 -translate-x-1/2 -translate-y-1/2">
           <div class="flex justify-between w-36 sm:flex sm:justify-between sm:w-96 items-baseline mb-8">
             <h1 class=" text-2xl sm:text-5xl mt-8 sm:ml-12  text-white ">Todo</h1>
-            <img class="h-4 sm:h-8  items-baseline" src="../images/icon-moon.svg" alt="" srcset="">
+            <img id="toggleDark" class="h-4 sm:h-8  items-baseline" src="./images/icon-moon.svg" alt="" srcset="">
           </div>
           
           <div class="sm:w-36 text-center justify-center relative flex items-center mx-auto">
